# group7-python-project

./: .env.docker.example  .env.example  .gitignore  Aichat.py  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
personal_assistant/: .env.example  docker-compose.yml  manage.py
personal_assistant/chat/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
personal_assistant/chat/management/commands/: chat.py
personal_assistant/chat/migrations/: 0001_initial.py
personal_assistant/chat/templates/chat/: chat.html
personal_assistant/contacts/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
personal_assistant/contacts/migrations/: 0001_initial.py  0002_alter_contact_phone_number.py  0003_alter_contact_birthday.py  0004_contact_user.py
personal_assistant/contacts/templates/contacts/: confirm_delete.html  contacts.html  create_contact.html  edit_contact.html
personal_assistant/diary/: apps.py  forms.py  models.py  urls.py  views.py
personal_assistant/diary/migrations/: 0001_initial.py
personal_assistant/files/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
personal_assistant/files/migrations/: 0001_initial.py  0002_alter_uploadedfile_url.py  0003_uploadedfile_user.py
personal_assistant/news/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
personal_assistant/notes/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
personal_assistant/notes/migrations/: 0001_initial.py  0002_remove_note_done_note_user_tag_user_alter_tag_name_and_more.py
personal_assistant/notes/templatetags/: extract_tags.py
personal_assistant/personal_assistant/: asgi.py  settings.py  urls.py  wsgi.py
personal_assistant/static/: style.css
personal_assistant/templates/: base.html
personal_assistant/users/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
personal_assistant/users/migrations/: 0001_initial.py
scripts/: wait_for_db.sh
(+13 files in other folders)
